--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "gulp-less": "^4.0.1",
     "gulp-livereload": "^4.0.1",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-manifest": "0.1.1",
+    "gulp-manifest3": "^0.1.2",
     "gulp-minify-css": "^0.3.12",
     "gulp-minify-html": "^0.1.1",
     "gulp-ng-annotate": "~0.5.2",
