--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Telegram",
-  "description": "Telegram Web App.\nMore info & source code here: https://github.com/zhukov/webogram",
+  "name": "Kotatogram",
+  "description": "Kotatogram Web App.\nMore info & source code here: https://github.com/kotatogram/kotatogram-oldweb",
   "version": "0.0.1",
-  "short_name": "Telegram",
+  "short_name": "Kotatogram",
   "manifest_version": 2,
   "app": {
     "background": {
